<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
    tools:context="ir.dpi.capdriver.SignUpActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/activity_edit_info_label"
        android:id="@+id/tvEditInfo"
        android:textAlignment="center" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginRight="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginTop="@dimen/activity_signup_text_margin_top_bottom"
        android:layout_marginBottom="@dimen/activity_signup_text_margin_top_bottom"
        android:background="@color/colorGray"
        android:hint="@string/activity_signup_txtFirstName"
        android:id="@+id/txtFirstNameName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginRight="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginTop="@dimen/activity_signup_text_margin_top_bottom"
        android:layout_marginBottom="@dimen/activity_signup_text_margin_top_bottom"
        android:background="@color/colorGray"
        android:hint="@string/activity_signup_txtLastName"
        android:id="@+id/txtLastName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginRight="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginTop="@dimen/activity_signup_text_margin_top_bottom"
        android:layout_marginBottom="@dimen/activity_signup_text_margin_top_bottom"
        android:background="@color/colorGray"
        android:hint="@string/activity_edit_info_phone"
        android:drawableLeft="@drawable/ic_action_phone"
        android:id="@+id/txtPhone"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginRight="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginTop="@dimen/activity_signup_text_margin_top_bottom"
        android:layout_marginBottom="@dimen/activity_signup_text_margin_top_bottom"
        android:background="@color/colorGray"
        android:hint="@string/activity_edit_info_hand_phone"
        android:drawableLeft="@drawable/ic_action_hand_phone"
        android:id="@+id/txtMobile"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginRight="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginTop="@dimen/activity_signup_text_margin_top_bottom"
        android:layout_marginBottom="@dimen/activity_signup_text_margin_top_bottom"
        android:background="@color/colorGray"
        android:hint="@string/activity_signup_txtEmail"
        android:drawableLeft="@drawable/ic_action_email"
        android:id="@+id/txtEmail"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginRight="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginTop="@dimen/activity_signup_text_margin_top_bottom"
        android:layout_marginBottom="@dimen/activity_signup_text_margin_top_bottom"
        android:background="@color/colorGray"
        android:hint="@string/activity_edit_info_address"
        android:drawableLeft="@drawable/ic_action_address"
        android:id="@+id/txtAddress"/>
    <!--<EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginRight="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginTop="@dimen/activity_signup_text_margin_top_bottom"
        android:layout_marginBottom="@dimen/activity_signup_text_margin_top_bottom"
        android:background="@color/colorGray"
        android:hint="@string/activity_edit_info_birth_day"
        android:drawableLeft="@drawable/ic_action_birth_day"
        android:id="@+id/txtBirthDay"/>-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginRight="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginTop="@dimen/activity_signup_text_margin_top_bottom"
        android:layout_marginBottom="@dimen/activity_signup_text_margin_top_bottom"
        android:background="@color/colorGray"
        android:hint="@string/activity_edit_info_gender"
        android:drawableLeft="@drawable/ic_action_gender"
        android:id="@+id/txtGender"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginRight="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginTop="@dimen/activity_signup_text_margin_top_bottom"
        android:layout_marginBottom="@dimen/activity_signup_text_margin_top_bottom"
        android:background="@color/colorGray"
        android:hint="@string/activity_signup_txtCarModel"
        android:drawableLeft="@drawable/ic_action_password"
        android:id="@+id/txtCarModel"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginRight="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginTop="@dimen/activity_signup_text_margin_top_bottom"
        android:layout_marginBottom="@dimen/activity_signup_text_margin_top_bottom"
        android:background="@color/colorGray"
        android:hint="@string/activity_signup_txtCarColor"
        android:drawableLeft="@drawable/ic_action_password"
        android:id="@+id/txtCarColor"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginRight="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginTop="@dimen/activity_signup_text_margin_top_bottom"
        android:layout_marginBottom="@dimen/activity_signup_text_margin_top_bottom"
        android:background="@color/colorGray"
        android:hint="@string/activity_signup_txtNumberPlate"
        android:drawableLeft="@drawable/ic_action_password"
        android:id="@+id/txtNumberPlate"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:text="@string/activity_main_btn_save"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>
</LinearLayout>
