<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_driver_notify"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ir.dpi.capdriver.DriverNotify"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentTop="true"
    android:layoutDirection="rtl">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.48"
        android:id="@+id/progressBar">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timerTxt"
            android:layout_marginLeft="145dp"/>

        <ProgressBar
            android:id="@+id/progressbar"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:progressDrawable="@drawable/customprogressbar"
            android:max="25"
            android:progress="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_weight="0.82"
                android:layout_height="5dp">
                <TextView
                    android:text="@string/activity_driver_notify_passenger_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/passengerName"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/passengerNameTxt"
                    android:gravity="center"
                    android:layout_weight="1"/>
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75">

                <TextView
                    android:text="@string/activity_driver_notify_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/source"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sourceTxt"
                    android:gravity="center"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.73">
            <TextView
                android:text="@string/activity_driver_notify_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/destination"
                android:gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/destinationTxt"
                android:gravity="center"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:id="@+id/acceptionBtns"
            android:visibility="visible"
            android:layout_width="match_parent">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAccept"
                android:text="@string/accept"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_weight="0.17"
                android:layout_height="wrap_content"
                android:id="@+id/btnNoAccept"
                android:text="@string/decline"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttons"
            android:visibility="visible"
            android:weightSum="1"
            android:layout_weight="0.10">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/afterAcceptionBtns"
                android:visibility="visible"
                >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnEndOfTrip"
                android:text="@string/activity_driver_notify_end_of_trip"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/btnDirection"
                android:text="@string/activity_driver_notify_google_map"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/afterAcceptionBtns1"
                android:visibility="visible">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/btnCancel"
                    android:text="@string/activity_driver_notify_Cancel"
                    android:gravity="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnPassengerArrived"
                    android:text="@string/activity_driver_notify_cap_arrived"
                    android:gravity="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnCall"
                    android:text="@string/activity_driver_notify_call"
                    android:gravity="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
</LinearLayout>

