<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:src="@drawable/login"
        android:id="@+id/imageView" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginRight="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginTop="@dimen/activity_signup_text_margin_top_bottom"
        android:layout_marginBottom="@dimen/activity_signup_text_margin_top_bottom"
        android:background="@color/colorGray"
        android:hint="@string/activity_signup_txtEmail"
        android:drawableLeft="@drawable/ic_action_email"
        android:id="@+id/txtEmail"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginRight="@dimen/activity_signup_text_margin_right_left"
        android:layout_marginTop="@dimen/activity_signup_text_margin_top_bottom"
        android:layout_marginBottom="@dimen/activity_signup_text_margin_top_bottom"
        android:background="@color/colorGray"
        android:hint="@string/activity_signup_txtPassword"
        android:drawableLeft="@drawable/ic_action_password"
        android:id="@+id/txtPassword"
        android:inputType="textPassword"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:text="@string/activity_main_btn_login"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>
</LinearLayout>
